[package]
name = "protocol-analyzer"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
env_logger = "0.8.3"
fnv = "1.0.7"
hex = "0.4.3"
libpacket = "0.1.2"
libpcap-tools = { path = "../pcap-analyzer/libpcap-tools" }
log = "0.4.14"
parking_lot = "0.11.1"
pcap-parser = { version = "0.11.1", features = ["data"] }
quinn-noise = "0.2.0"
quinn-proto = { version = "0.7.3", default-features = false }
serde_json = "1.0.64"
